--- a/android/res/layout/activity_home_screen.xml
+++ b/android/res/layout/activity_home_screen.xml
@@ -2,12 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".HomeScreen">
+    tools:context=".Ui.MainPage.HomeScreen">
 
   <Button
       android:id="@+id/startGame"
