--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main_fragment"
-    tools:context=".MainPage.MainFragment">
+    android:gravity="center">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- Large Text View for "Play" -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/playTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:layout_centerVertical="true"/>
 
-</FrameLayout>
+    <!-- Button underneath the Text View -->
+    <Button
+        android:id="@+id/playButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:layout_below="@id/playTextView"
+        android:layout_marginTop="16dp"/>
+
+</RelativeLayout>
