--- a/android/res/layout/update_dialog.xml
+++ b/android/res/layout/update_dialog.xml
@@ -3,6 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:layout_marginTop="100dp"
+        android:id="@+id/imageSelect"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/default_icon"
+        />
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="200dp"
@@ -10,6 +19,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
+        android:layout_below="@id/imageSelect"
         android:hint="Name"/>
 
     <EditText
