reworked beatproccessing, added score text, added long and double notes

--- a/android/res/layout/update_dialog.xml
+++ b/android/res/layout/update_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/default_icon"
+        android:src="@drawable/defaulticondrawing"
         />
     <EditText
         android:id="@+id/editTextName"
