--- a/android/res/layout/fragment_account_loggedin.xml
+++ b/android/res/layout/fragment_account_loggedin.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/default_icon"
+        android:src="@drawable/defaulticondrawing"
         android:scaleType="centerCrop"
         android:layout_marginBottom="16dp"/>
 
