--- a/android/res/layout/update_dialog.xml
+++ b/android/res/layout/update_dialog.xml
@@ -1,71 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
+    >
 
-<!--    <ImageButton-->
-<!--        android:layout_marginTop="100dp"-->
-<!--        android:id="@+id/imageSelect"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:src="@drawable/defaulticondrawing"-->
-<!--        />-->
-<!--    <EditText-->
-<!--        android:id="@+id/editTextName"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_centerVertical="true"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_below="@id/imageSelect"-->
-<!--        android:hint="Name"/>-->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fRow"
+        android:orientation="horizontal"
+       >
+        <ImageButton
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/defaulticondrawing"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:id="@+id/i1"
+            />
+    <ImageButton
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/dog"
+        android:scaleType="fitCenter"
+        android:background="@null"
+        android:id="@+id/i2"
+        android:layout_marginLeft="10dp"
+        />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/sRow"
+        android:orientation="horizontal"
+        android:layout_below="@id/fRow"
 
-<!--    <EditText-->
-<!--        android:id="@+id/editTextEmail"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/editTextName"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:hint="Email"/>-->
+        >
+        <ImageButton
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/default_icon"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:id="@+id/i3"
+            />
+        <ImageButton
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_launcher"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:id="@+id/i4"
+            android:layout_marginLeft="10dp"
+            />
 
-<!--    <EditText-->
-<!--        android:id="@+id/editTextPassword"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/editTextEmail"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:hint="Password"-->
-<!--        android:inputType="textPassword"/>-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/buttonLayout"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/editTextPassword"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="16dp">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btnCancel"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Cancel"/>-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btnUpdate"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Update"/>-->
-
-<!--    </LinearLayout>-->
-
+    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sRow"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:text="Back"
+        android:id="@+id/btnD"
+        />
 </RelativeLayout>
