--- a/android/res/layout/fragment_account_loggedin.xml
+++ b/android/res/layout/fragment_account_loggedin.xml
@@ -8,6 +8,7 @@
 
     <!-- Image View for the Profile Picture -->
     <ImageView
+        android:id="@+id/profilePic"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/defaulticondrawing"
