--- a/android/res/layout/activity_login_page.xml
+++ b/android/res/layout/activity_login_page.xml
@@ -12,7 +12,7 @@
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:hint="Mail"
-      android:inputType="textPersonName"
+      android:inputType="textEmailAddress"
       android:gravity="center"
       android:layout_marginBottom="8dp"/>
 
