--- a/android/res/layout/activity_main_page.xml
+++ b/android/res/layout/activity_main_page.xml
@@ -17,6 +17,7 @@
       android:id="@+id/viewPager"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="@drawable/backgrounds_main"
       android:layout_above="@+id/bottomNavigation" />
 
   <!-- Bottom navigation bar -->
