--- a/android/res/layout/fragment_main.xml
+++ b/android/res/layout/fragment_main.xml
@@ -4,23 +4,15 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <!-- Large Text View for "Play" -->
-    <TextView
-        android:id="@+id/playTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Play"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:layout_centerVertical="true"/>
-
     <!-- Button underneath the Text View -->
     <Button
         android:id="@+id/playButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start"
-        android:layout_below="@id/playTextView"
+        android:layout_width="170dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_bg"
+        android:text="PLAY"
+        android:textSize="50dp"
+        android:textColor="#ffffffff"
         android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
