--- a/android/res/layout/update_dialog.xml
+++ b/android/res/layout/update_dialog.xml
@@ -23,7 +23,7 @@
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/dog"
+        android:src="@drawable/icon_hand"
         android:scaleType="fitCenter"
         android:background="@null"
         android:id="@+id/i2"
@@ -49,7 +49,7 @@
         <ImageButton
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/ic_launcher"
+            android:src="@drawable/yugi_icon"
             android:scaleType="fitCenter"
             android:background="@null"
             android:id="@+id/i4"
