--- a/android/res/menu/bottom_nav_menu.xml
+++ b/android/res/menu/bottom_nav_menu.xml
@@ -3,12 +3,12 @@
     <item
         android:id="@+id/navigation_fragment1"
         android:title="Shop"
-        android:icon="@drawable/dog" />
+        android:icon="@drawable/shop" />
 
     <item
         android:id="@+id/navigation_fragment2"
         android:title="Main"
-        android:icon="@drawable/dog" />
+        android:icon="@drawable/home" />
 
     <item
         android:id="@+id/navigation_fragment3"
